Node assets: Crash when dragging into an empty node editor #112021

Closed
opened 2023-09-06 11:53:54 +02:00 by Lukas Tönne · 3 comments
Member

System Information
Operating system: Linux-6.4.8-gentoo-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.37 64 Bits, WAYLAND UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 15.0.7, DRM 3.52, 6.4.8-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-57b0db63e1)

Blender Version
Broken: version: 4.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Dragging a node group asset into an empty node editor crashes Blender.

Exact steps for others to reproduce the error

  1. Open an asset browser and a node editor
  2. Drag any node asset into the node editor (without making a node group first!)
    image
**System Information** Operating system: Linux-6.4.8-gentoo-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.37 64 Bits, WAYLAND UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 15.0.7, DRM 3.52, 6.4.8-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-57b0db63e1) **Blender Version** Broken: version: 4.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Dragging a node group asset into an empty node editor crashes Blender. **Exact steps for others to reproduce the error** 1. Open an asset browser and a node editor 2. Drag any node asset into the node editor (**without** making a node group first!) ![image](/attachments/848e9e59-871f-4d9b-8d3e-f71ac8840207)
767 KiB
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-06 11:53:54 +02:00
Lukas Tönne added this to the Nodes & Physics project 2023-09-06 11:54:36 +02:00
Member

I can confirm.
Bisecting something else atm. But I suspect 30e3caaf82 from call stack
@lichtwerk ^

I can confirm. Bisecting something else atm. But I suspect 30e3caaf8291811f9c86a5721a67a976d18e5af2 from call stack @lichtwerk ^
Member

Will check, thx poking!

Will check, thx poking!
Philipp Oeser self-assigned this 2023-09-06 12:29:39 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 13:52:47 +02:00
Member

@lichtwerk hi, 30e3caaf82 is listed for backporting. So also add your fix in the 3.6 list 🙂

@lichtwerk hi, 30e3caaf8291811f9c86a5721a67a976d18e5af2 is listed for backporting. So also add your fix in the 3.6 list 🙂
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112021
No description provided.