Fix #112021: Crash dragging node groups into an empty node editor

Mistake in 30e3caaf82 (which wasnt checking if an `edittree` actually
existed).

Pull Request: https://projects.blender.org/blender/blender/pulls/112023